[package]
name = "marquee"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.8", features = ["derive"] }
git2 = "0.16.1"
mlua = { version = "0.8.7", features = ["lua54"] }
